# hpcos

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  relatorio.md
benchmark/: CMakeLists.txt  benchmark.cpp
extra/: build_relatorio.sh  generate_test_case.py
lib/modules/: FindGMP.cmake
src/: CMakeLists.txt  calculator.cpp  calculator.h  input.cpp  input.h  main.cpp  tfuncs.hpp
src/utils/: CMakeLists.txt  barrier.cpp  barrier.h  semaphore.cpp  semaphore.h
tests/: CMakeLists.txt  cos_1.txt  test_calculator.cpp  test_input.cpp
