CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# Turn it on through: -Dtest=ON
OPTION(test "Include Tests." OFF) 

# Project definition
SET(PROJECT_NAME hpos)
PROJECT(${PROJECT_NAME} C CXX)

SET(${PROJECT_NAME}_VERSION_MAJOR 0)
SET(${PROJECT_NAME}_VERSION_MINOR 1)
FIND_PACKAGE(Threads REQUIRED)

SET(CMAKE_CXX_FLAGS "-g -Wall")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

ADD_SUBDIRECTORY(src/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)

# TESTING
IF (test)
    ADD_SUBDIRECTORY(lib/gtest-1.6.0)
    ENABLE_TESTING()
    INCLUDE_DIRECTORIES(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})

    # Our test source
    ADD_SUBDIRECTORY(tests/)
ENDIF (test)
